kotlin-kafka-reactive-web/deployment/reactive-web-server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: reactive-web-service
spec:
  rules:
    - host: reactive-web-service.192.168.64.11.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: reactive-web-service
              servicePort: 8080
